--- a/about.html
+++ b/about.html
@@ -277,7 +277,7 @@
               </div>
               <div class="sm_heading">Bolaji Balogun</div>
               <div class="bold">Director</div>
-              <div class="bold">Chapelhill Denham</div>
+              <div class="bold">Chapel Hill Denham</div>
             </div>
 
             <div class="card">
@@ -429,14 +429,10 @@
             <img src="images/banjo.png" alt="Banjo Adegbohungbe" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
-            <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
-            </div>
+            <div class="sm_heading">Banjo Adegbohungbe</div>
+            <div class="bold">Director</div>
+            <div class="bold">Coronation Merchant Bank</div>
+            <div class="thin">Banjo is MD/CEO of Coronation Merchant Bank.</div>
           </div>
         </div>
         <div class="close_btn">
@@ -450,14 +446,10 @@
             <img src="images/bola.png" alt="Bola Onadele Koko" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
-            <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
-            </div>
+            <div class="sm_heading">Bola "Koko" Onadele</div>
+            <div class="bold">Director</div>
+            <div class="bold">FMDQ Group</div>
+            <div class="thin">Koko is the MD/CEO of FMDQ OTC Plc.</div>
           </div>
         </div>
         <div class="close_btn">
@@ -471,13 +463,11 @@
             <img src="images/bolaji.png" alt="Bolaji Balogun" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
+            <div class="sm_heading">Bolaji Balogun</div>
             <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
+            <div class="bold">Chapel Hill Denham</div>
             <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
+              Bolaji Balogun is the MD/CEO of Chapel Hill Denham.
             </div>
           </div>
         </div>
@@ -492,13 +482,11 @@
             <img src="images/gbenga.png" alt="Gbenga Oyebode" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
+            <div class="sm_heading">Gbenga Oyebode</div>
+            <div class="bold">Director</div>
+            <div class="bold">Aluko & Oyebode</div>
             <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
+              Gbenga Oyebode is the co-founder of Aluko & Oyebode.
             </div>
           </div>
         </div>
@@ -513,13 +501,11 @@
             <img src="images/kayode.png" alt="Kayode Akinkugbe" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
+            <div class="sm_heading">Kayode Akinkugbe</div>
+            <div class="bold">Director</div>
+            <div class="bold">FBNQuest Merchant Bank Limited</div>
             <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
+              Kayode Akinkugbe is the MD/CEO of FBNQuest Merchant Bank Limited.
             </div>
           </div>
         </div>
@@ -534,13 +520,11 @@
             <img src="images/oscar.png" alt="Oscar Onyema" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
+            <div class="sm_heading">Oscar Onyema</div>
+            <div class="bold">Director</div>
+            <div class="bold">NGX Group</div>
             <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
+              Oscar Onyema is the Group MD/CEO of the NGX Group
             </div>
           </div>
         </div>
@@ -579,16 +563,22 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+            <img src="images/lamiadekola.png" alt="Lami Adekola" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
+            <div class="sm_heading">Lami Adekola</div>
+            <div class="bold">Director, Policy & Public Affairs</div>
             <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
+              Lami is the Director of Policy and Public Affairs. Prior to
+              joining EnterpriseNGR he was Director, Financial and Professional
+              Services for Africa at the UK Department for International Trade
+              ("DIT") and also doubled as the Acting Country Director/Investment
+              officer for DIT in Nigeria. His career has seen him gain valuable
+              experience across Banking, Investment Banking, Insurance, Asset
+              Management, Pension Fund Management and Law. Lami holds BSc and
+              MSc Economics degrees both fron the University of Lagos. He is an
+              Affiliate Member of the Association of Certified Chartered
+              Accountants (ACCA), England & Wales.
             </div>
           </div>
         </div>
@@ -600,16 +590,23 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+            <img
+              src="images/uchechiakinwale.png"
+              alt="Uchechi Oluwole-Akinwale"
+            />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
+            <div class="sm_heading">Uchechi Oluwole-Akinwale</div>
+            <div class="bold">Head, Corporate Services</div>
             <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
+              Uchechi is Head of Corporate Services at EnterpriseNGR. She has
+              over a decade of proven expertise in multiple areas of law. She
+              was a Senior Legal Manager and Head of Commercial Contracts in
+              First Bank of Nigeria Limited. She obtained a Bachelor's degree in
+              Law from the University of Lagos and a Master's degree in
+              Corporate & Commercial Law from Queen Mary University of London.
+              She holds a Global Certificate on International Financial System
+              (for regulators of securities markets) from Havard Law School.
             </div>
           </div>
         </div>
@@ -621,16 +618,13 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+            <img src="images/sochiazuh.png" alt="Sochi Azuh" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
+            <div class="sm_heading">Sochi Azuh</div>
+            <div class="bold">Head, Corporate Communications & Branding</div>
             <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
+              Sochi is the Head of Corporate Communications and branding.
             </div>
           </div>
         </div>
@@ -642,16 +636,22 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+            <img src="images/tayomuritala.png" alt="Tayo Muritala" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
+            <div class="sm_heading">Tayo Muritala</div>
+            <div class="bold">Head, Research</div>
             <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
+              Tayo is Head of Research at EnterpriseNGR. Prior to this he held
+              the position of Research Manager at the prestigious Lagos Business
+              School. Before joining Lagos Business School he worked as a Deputy
+              Research Executive at Value Fronteira Ltd. Previously, he worked
+              as a research assistant at the University of Lagos where he
+              developed research designs, analysed research data and conducted
+              literature and database searches, for research fellows/scholars.
+              He obtained a Bachelor's degree in Economics from the University
+              of Lagos and a Master's degree also in Economics from the
+              University of Ibadan.
             </div>
           </div>
         </div>
@@ -663,17 +663,13 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/aigboje.png" alt="Aigboje Aig-Imoukhuede" />
+            <img src="images/ogennaife.png" alt="Oge Nnaife" />
           </div>
           <div>
-            <div class="sm_heading">Aigboje Aig-Imoukhuede</div>
-            <div class="bold">Chairman</div>
-            <div class="bold">Tengen Family Office</div>
-            <div class="thin">
-              Mr. Aigboje Aig-Imoukhuede is the Chairman of EnterpriseNGR. He
-              also currently serves as Chairman - Wapic Insurance Plc; and was a
-              former President, Nigeria Stock Exchange.
-            </div>
+            <div class="sm_heading">Oge Nnaife</div>
+            <div class="bold">Head of Programmes</div>
+
+            <div class="thin">Oge is the Head of Programmes.</div>
           </div>
         </div>
         <div class="close_btn">
