--- a/greenstart.html
+++ b/greenstart.html
@@ -53,65 +53,78 @@
       </div>
     </header>
 
-    <section class="greenstart_ad">
-      <div class="md_heading green">Ready to get your #GreenStart?</div>
-      <div class="bold">
-        YOE will make you a star candidate for recruitment into the financial
-        and professional services sector with the following:
+    <section class="promo">
+      <div class="embed">
+        <iframe
+          style="width: 100%; height: 100%"
+          src="https://www.youtube.com/embed/9GVL5lm7Md8?start=2"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
       </div>
-      <div>
-        <ul>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            >Employability Skills
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            >Hands-on Training
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            >Mentorship
-          </li>
-          <li>
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            >Zero Cost
-          </li>
-        </ul>
-      </div>
-      <div class="btn">
-        <a href="http://enterprisengr.roundstone.solutions/login"
-          ><button class="big_btn">
-            <span
-              class="iconify-inline"
-              data-icon="bi:arrow-right-circle"
-              style="color: #40ba7b"
-              data-width="29"
-              data-height="29"
-            ></span>
-            <span class="btn_text">Sign Up Here</span>
-          </button></a
-        >
+
+      <div class="greenstart_ad">
+        <div class="md_heading green">Ready to get your #GreenStart?</div>
+        <div class="bold">
+          YOE will make you a star candidate for recruitment into the financial
+          and professional services sector with the following:
+        </div>
+        <div>
+          <ul>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle-fill"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span
+              >Employability Skills
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle-fill"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span
+              >Hands-on Training
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle-fill"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span
+              >Mentorship
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle-fill"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span
+              >Zero Cost
+            </li>
+          </ul>
+        </div>
+        <div class="btn">
+          <a href="http://enterprisengr.roundstone.solutions/login"
+            ><button class="big_btn">
+              <span
+                class="iconify-inline"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="29"
+                data-height="29"
+              ></span>
+              <span class="btn_text">Sign Up Here</span>
+            </button></a
+          >
+        </div>
       </div>
     </section>
 
@@ -179,11 +192,10 @@
             <a href="http://enterprisengr.roundstone.solutions/login"
               ><button class="big_btn">
                 <span
-                  class="iconify-inline"
+                  class="iconify"
                   data-icon="bi:arrow-right-circle"
                   style="color: #40ba7b"
                   data-width="29"
-                  data-height="29"
                 ></span>
                 <span class="btn_text">Sign Up Here</span>
               </button></a
@@ -201,7 +213,7 @@
       </div>
     </section>
 
-    <div class="mission_wrapper">
+    <!-- <div class="mission_wrapper">
       <section class="economy mission">
         <div class="economy_grid">
           <div class="economy_description">
@@ -233,11 +245,179 @@
           </div>
         </div>
       </section>
-    </div>
+    </div> -->
+
+    <section class="approachngr">
+      <div class="md_heading">Our Approach</div>
+
+      <div class="grid">
+        <div>
+          <div class="image">
+            <img src="images/partnership.png" alt="" />
+          </div>
+          <div class="big">PARTNERSHIP</div>
+          <ul>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="29"
+              ></span>
+              <span class="text">FPS Sector</span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="29"
+              ></span>
+              <span class="text">Other Sectors</span>
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <div class="image">
+            <img src="images/profile.png" alt="" />
+          </div>
+          <div class="big">ONBOARDING</div>
+          <ul>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Application through </span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Bespoke Technology</span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Identity Verification</span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Assessments and Screening </span>
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <div class="image">
+            <img src="images/seo.png" alt="" />
+          </div>
+          <div class="big">TRAINING</div>
+          <ul>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Robust Curriculum </span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Highly Engaging </span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Learning Management System </span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Reading and Team Activities </span>
+            </li>
+          </ul>
+        </div>
+
+        <div>
+          <div class="image">
+            <img src="images/placement.png" alt="" />
+          </div>
+          <div class="big">PLACEMENT</div>
+          <ul>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Employer-Intern matching </span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">On-the-job-training </span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Post internship support </span>
+            </li>
+            <li>
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span>
+              <span class="text">Mentorship</span>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
     <div class="agenda_wrapper main">
       <section class="manifesto">
-        <div class="sm_heading">OUR MANIFESTO</div>
+        <div class="sm_heading">OUR COMMITMENT</div>
         <div class="md_heading">YOE is EnterpriseNGR’s commitment to:</div>
         <div>
           <ul>
