--- a/agenda.html
+++ b/agenda.html
@@ -98,7 +98,7 @@
                   style="color: #40ba7b"
                   data-width="26"
                 ></span
-                >International trade and investment.
+                >International Trade and Investment.
               </li>
               <li>
                 <span
@@ -171,7 +171,7 @@
         </div>
         <div>
           <div class="md_heading">4.</div>
-          <div class="md_heading">International trade & investment</div>
+          <div class="md_heading">International Trade & Investment</div>
           <div>
             Promote Nigeria as a major destination for international trade and
             investment and enable easy transactions.
