--- a/contact.html
+++ b/contact.html
@@ -118,22 +118,22 @@
           <div class="md_heading">Get In Touch</div>
           <form action="">
             <div>
-              <label for="name">Name</label>
+              <label for="name">FULL NAME</label>
               <input type="text" size="30" />
             </div>
 
             <div>
-              <label for="email">E-mail</label>
+              <label for="email">EMAIL ADDRESS</label>
               <input type="e-mail" size="30" />
             </div>
 
             <div>
-              <label for="message">Send Message</label>
+              <label for="message">MESSAGE</label>
               <textarea rows="6" cols="30"></textarea>
             </div>
 
             <div class="btn">
-              <button>Send Message</button>
+              <button>Submit</button>
             </div>
           </form>
         </div>
