--- a/greenstart.html
+++ b/greenstart.html
@@ -60,7 +60,7 @@
           src="https://www.youtube.com/embed/9GVL5lm7Md8?start=2"
           title="YouTube video player"
           frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
       </div>
