--- a/greenstart.html
+++ b/greenstart.html
@@ -251,7 +251,7 @@
       <div class="md_heading">Our Approach</div>
 
       <div class="grid">
-        <div>
+        <div class="item">
           <div class="image">
             <img src="images/partnership.png" alt="" />
           </div>
@@ -278,7 +278,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="item">
           <div class="image">
             <img src="images/profile.png" alt="" />
           </div>
@@ -323,7 +323,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="item">
           <div class="image">
             <img src="images/seo.png" alt="" />
           </div>
@@ -368,7 +368,7 @@
           </ul>
         </div>
 
-        <div>
+        <div class="item">
           <div class="image">
             <img src="images/placement.png" alt="" />
           </div>
