--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
       </div>
     </section>
 
-    <section class="mission_vision_value">
+    <!-- <section class="mission_vision_value">
       <div class="buttons">
         <button class="mission_btn active">MISSION</button
         ><button class="mission_btn">VISION</button
@@ -222,6 +222,62 @@
             >Regionalization.
           </li>
         </ul>
+      </div>
+    </section> -->
+
+    <section class="mission_vision">
+      <div class="green">
+        <div class="sm_heading">Mission</div>
+        <div class="thin">
+          To be a leading voice and champion for the development and
+          transformation of Nigeria.
+        </div>
+      </div>
+
+      <div class="white">
+        <div class="sm_heading">Vision</div>
+        <div class="thin">
+          To advance Nigeria’s transformation as Africa’s premier financial
+          services centre
+        </div>
+      </div>
+
+      <div class="green">
+        <div class="sm_heading">Values</div>
+        <div>
+          <ul>
+            <li>
+              <span
+                class="iconify-inline"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="29"
+                data-height="29"
+              ></span
+              >Financial Inclusion.
+            </li>
+            <li>
+              <span
+                class="iconify-inline"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="29"
+                data-height="29"
+              ></span
+              >Digitization.
+            </li>
+            <li>
+              <span
+                class="iconify-inline"
+                data-icon="bi:arrow-right-circle"
+                style="color: #40ba7b"
+                data-width="29"
+                data-height="29"
+              ></span
+              >Regionalization.
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
@@ -776,7 +832,7 @@
       <div class="contact_info">
         <div><img src="images/EnterpriseNGRLogo.png" /></div>
         <div class="column">
-          <div class="phone">+234 812 235 0250</div>
+          <div class="phone">+234 912 883 2451</div>
           <div>contactus@enterprisengr.com</div>
           <div>
             106 1B Abagbon Close, Off Adeola Odeku Victoria Island, Lagos.
