--- a/about.html
+++ b/about.html
@@ -173,7 +173,7 @@
         </div>
 
         <div class="img history">
-          <img src="images/about2.png" alt="Economy" />
+          <img src="images/about_how_started.png" alt="Economy" />
         </div>
       </div>
     </section>
