--- a/member.html
+++ b/member.html
@@ -456,7 +456,7 @@
           </div>
         </div>
         <div class="column">
-          <div>Our Interventions</div>
+          <div><a href="agenda.html">Our Agenda</a></div>
           <div><a href="member.html">Membership</a></div>
           <div><a href="policy.html">Policy & Research</a></div>
           <div><a href="news.html">News & Events</a></div>
