--- a/newsitem.html
+++ b/newsitem.html
@@ -249,7 +249,7 @@
           </div>
         </div>
         <div class="column">
-          <div>Our Interventions</div>
+          <div><a href="agenda.html">Our Agenda</a></div>
           <div><a href="member.html"></a>Membership</div>
           <div><a href="policy.html"></a>Policy & Research</div>
           <div><a href="news.html"></a>News & Events</div>
