--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
 
       <div class="economy_grid">
         <div class="img">
-          <img src="images/about001.png" alt="Economy" />
+          <img src="images/image6.png" alt="Economy" />
         </div>
 
         <div class="economy_description">
