--- a/greenstart.html
+++ b/greenstart.html
@@ -291,16 +291,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Application through </span>
-            </li>
-            <li>
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span>
-              <span class="text">Bespoke Technology</span>
+              <span class="text">Application through bespoke technology</span>
             </li>
             <li>
               <span
