--- a/about.html
+++ b/about.html
@@ -302,7 +302,7 @@
 
             <div class="card">
               <div class="image">
-                <img src="images/ObiIbekwe.png" alt="Obi Ibekwe" />
+                <img src="images/Obi_Ibekwe.png" alt="Obi Ibekwe" />
               </div>
               <div class="sm_heading">Obi Ibekwe</div>
               <div class="bold">Chief Executive Officer</div>
@@ -454,7 +454,7 @@
       <div class="popup_modal">
         <div class="grid">
           <div class="image">
-            <img src="images/ObiIbekwe.png" alt="Obi Ibekwe" />
+            <img src="images/Obi_Ibekwe.png" alt="Obi Ibekwe" />
           </div>
           <div>
             <div class="sm_heading">Obi Ibekwe</div>
