--- a/agenda.html
+++ b/agenda.html
@@ -89,7 +89,7 @@
                   style="color: #40ba7b"
                   data-width="26"
                 ></span
-                >Regionalization.
+                >International Trade and Investment.
               </li>
               <li>
                 <span
@@ -98,7 +98,7 @@
                   style="color: #40ba7b"
                   data-width="26"
                 ></span
-                >International Trade and Investment.
+                >Regionalization.
               </li>
               <li>
                 <span
@@ -113,11 +113,11 @@
           </div>
           <div class="thin">
             We aim to advance this agenda by actively collaborating with our
-            members, industry partners, and stakeholders. Our pursuit of
+            members, industry partners, and other stakeholders. Our pursuit of
             recognizable success in all these areas will be supported by strong
-            and reliable research and data insight – all aimed at supporting the
-            growth of the Nigerian FPS sector and positioning it as a leading
-            financial centre in Africa and the world.
+            and reliable research and data insights – all aimed at supporting
+            the growth of the Nigerian FPS sector and positioning it as a
+            leading financial centre in Africa and the world.
           </div>
           <a href="about.html">
             <button class="big_btn">
