--- a/greenstart.html
+++ b/greenstart.html
@@ -354,7 +354,7 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Reading and Team Activities </span>
+              <span class="text">Reading and Teaming Activities </span>
             </li>
           </ul>
         </div>
@@ -465,7 +465,6 @@
             </li>
           </ul>
         </div>
-      
       </section>
 
       <section class="agenda_news">
