--- a/greenstart.html
+++ b/greenstart.html
@@ -329,6 +329,7 @@
               ></span>
               <span class="text">Robust Curriculum </span>
             </li>
+
             <li>
               <span
                 class="iconify"
@@ -336,16 +337,9 @@
                 style="color: #40ba7b"
                 data-width="26"
               ></span>
-              <span class="text">Highly Engaging </span>
-            </li>
-            <li>
-              <span
-                class="iconify"
-                data-icon="bi:arrow-right-circle"
-                style="color: #40ba7b"
-                data-width="26"
-              ></span>
-              <span class="text">Learning Management System </span>
+              <span class="text"
+                >Highly Engaging Learning Management System
+              </span>
             </li>
             <li>
               <span
