--- a/member.html
+++ b/member.html
@@ -225,15 +225,17 @@
         </div>
 
         <div class="btn">
-          <button class="md_btn">
-            <span
-              class="iconify"
-              data-icon="bi:arrow-right-circle-fill"
-              style="color: #40ba7b"
-              data-width="26"
-            ></span
-            ><span class="btn_text">Join Us</span>
-          </button>
+          <a href="http://youthofenterprise.ng/login">
+            <button class="md_btn">
+              <span
+                class="iconify"
+                data-icon="bi:arrow-right-circle-fill"
+                style="color: #40ba7b"
+                data-width="26"
+              ></span
+              ><span class="btn_text">Join Us</span>
+            </button>
+          </a>
         </div>
       </div>
     </section>
@@ -296,16 +298,19 @@
         Join our network of members at the forefront of advancing the
         development and transformation of Nigeria.
       </div>
+
       <div>
-        <button class="md_btn">
-          <span
-            class="iconify"
-            data-icon="bi:arrow-right-circle-fill"
-            style="color: #40ba7b"
-            data-width="26"
-          ></span
-          ><span class="btn_text">Join Us</span>
-        </button>
+        <a href="http://youthofenterprise.ng/login">
+          <button class="md_btn">
+            <span
+              class="iconify"
+              data-icon="bi:arrow-right-circle-fill"
+              style="color: #40ba7b"
+              data-width="26"
+            ></span
+            ><span class="btn_text">Join Us</span>
+          </button>
+        </a>
       </div>
     </section>
 
